--- a/src/main.css
+++ b/src/main.css
@@ -16,3 +16,15 @@
   max-width: 89.5%;
   padding-bottom: 0px;
 }
+
+.ui.statistic>.value, .ui.statistics .statistic>.value {
+  text-align: left;
+}
+
+.ui.statistic+.ui.statistic {
+  margin: 0;
+}
+
+.marginAbove {
+  margin-top: 10% !important;
+}
